--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "cypress": "^10.0.3",
     "next": "^12.1.5",
+    "node-fetch": "^3.3.1",
+    "node-html-parser": "^6.1.5",
+    "prettier": "^2.8.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
