--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,15 @@
 
 [[plugins]]
   package = "netlify-plugin-cypress"
+
+[[redirects]]
+  from = "/news"
+  to = "/.netlify/functions/news"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/news?id=:id"
+  to = "https://criticsbreakingnews.co.uk/?p=:id"
+  status = 301
+  condition = "${HTTP_REFERER =~ /facebook.com|m.facebook.com|twitter.com/}"
