--- a/netlify.toml
+++ b/netlify.toml
@@ -16,6 +16,5 @@
   to = "https://criticsbreakingnews.co.uk/?p=:id"
   status = 301
   force = true
-  conditions = { 
-    UserAgent = "facebookexternalhit/.*|Twitterbot/.*" 
-  }
+  [redirects.conditions]
+    UserAgent = "facebookexternalhit/.*|Twitterbot/.*"
