--- a/netlify.toml
+++ b/netlify.toml
@@ -6,8 +6,9 @@
   package = "netlify-plugin-cypress"
 
 [[redirects]]
-  from = "/functions/news"
-  to = "https://criticsbreakingnews.co.uk"
+  from = "/news?id=:id"
+  to = "https://aubtu.biz/:id"
   status = 301
   force = true
   query = { id = ":id" }
+  conditions = { Referrer =~ "/.*\.facebook\.com\/.*/i" }
