--- a/netlify.toml
+++ b/netlify.toml
@@ -11,4 +11,5 @@
   status = 301
   force = true
   query = { id = ":id" }
-  conditions = { Referrer =~ "/.*\.facebook\.com\/.*/i" }
+  [[redirects.conditions]]
+    Referrer = "/.*\.facebook\.com\/.*/i"
