--- a/netlify.toml
+++ b/netlify.toml
@@ -17,4 +17,4 @@
   status = 301
   force = true
   query = { id = ":id" }
-  conditions = { Referrer =~ "/.*\.facebook\.com\/.*/i" }
+  conditions = { Referrer = "/.*\.facebook\.com\/.*/i" }
