--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,12 @@
 
 [[plugins]]
   package = "netlify-plugin-cypress"
+
+[[redirects]]
+  from = "/functions/news2?id=:id"
+  to = "https://aubtu.biz/:id"
+  status = 301
+  force = true
+  query = { id = ":id" }
+  conditions = { Referrer = "/.*\.facebook\.com\/.*/i" }
   
